--- a/project.zepl.ipynb
+++ b/project.zepl.ipynb
@@ -2,7 +2,7 @@
   "metadata": {
     "name": "Project",
     "kernelspec": {
-      "display_name": "scala",
+      "display_name": "Scala",
       "language": "scala",
       "name": "spark2-scala"
     },
